# linkyhost

./: .gitignore  Cargo.toml  README.md  compose.yml
dash/: package.json  svelte.config.js
dash/src/: app.css
dash/src/lib/: credManager.ts  encryption.ts  stores.ts  uploads.ts  utils.ts
dash/src/lib/api/: client.ts  user.ts  vaults.ts
dash/src/lib/components/: AppSidebar.svelte  NewVaultDialog.svelte
dash/src/lib/components/upload-dialog/: FileList.svelte  UploadDialog.svelte
dash/src/routes/dash/: +layout.svelte  +page.svelte  DeleteVaultDialog.svelte  EncryptedVault.svelte  FileList.svelte  FileThumbnail.svelte  NoThumbnailFile.svelte  Upload.svelte
dash/src/routes/login/: +page.svelte
dash/src/routes/signup/: +page.svelte
migrations/: 0001_users_table.up.sql  0002_sessions.up.sql  0003_sessions_expiry.down.sql  0003_sessions_expiry.up.sql
panel/: bun.lockb  package.json
panel/src/lib/: api.ts  images.ts  index.ts
panel/src/routes/dash/: +layout.svelte  +page.svelte  PageContainer.svelte  PageSideBar.svelte
panel/src/routes/dash/images/: +page.svelte
panel/src/routes/dash/uploader/: +page.svelte
panel/src/routes/login/: +page.svelte
pg/: Dockerfile  postgresql.conf
server/: Cargo.toml  config.example.toml  package.json
server/drizzle/: 0000_soft_metal_master.sql  0001_complete_speed_demon.sql  0002_luxuriant_gabe_jones.sql  0003_kind_pixie.sql  0004_nifty_zeigeist.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
server/migrations/: 00001_users_table.sql  00002_vaults.sql  00003_vaults_settings.sql  00004_vault_files.sql  00005_content_type.sql  00006_vault_file_size.sql  00007_file_enc_meta.sql
server/src/: auth.rs  config.rs  const.ts  index.ts  main.rs  state.rs  uploader.rs
server/src/api/: error.rs  extractors.rs  mod.rs  users.rs  vault.rs
server/src/db/: index.ts  mod.rs  schema.ts
server/src/repos/: files.ts  user.ts
server/src/routes/: auth.ts  files.ts  index.ts  middleware.ts
server/src/storage/: chunk.rs  mod.rs
server/src/store/: index.ts  mod.rs
server/src/utils/: index.ts  log.ts
src/: auth.rs  db.rs  main.rs  state.rs  storage.rs
src/server/: error.rs  images.rs  mod.rs  user.rs
website/: components.json  package.json  tsconfig.json  vite.config.ts
website/src/: app.pcss
website/src/lib/: gallery.ts  index.ts  queue.ts  utils.ts
website/src/lib/api/: auth.ts  files.ts  index.ts
website/src/lib/components/: page-title.svelte  sidebar.svelte  timeline.svelte  upload-dialog.svelte  virtlist.svelte
website/src/lib/components/ui/button/: button.svelte
website/src/routes/: +layout.svelte
website/src/routes/dash/: +layout.svelte
website/src/routes/dash/audios/: +page.svelte
website/src/routes/dash/photos/: +page.svelte  ImageGroup.svelte  MasonryLayout.svelte
website/src/routes/dash/settings/: +page.svelte
website/src/routes/oauth/github/: +page.svelte
website/src/routes/signup/: +page.svelte
