[package]
name = "linkyhost"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
argon2 = "0.5.3"
axum = "0.7.7"
chrono = "0.4.38"
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.41.1", features = ["signal", "tracing", "sync", "rt-multi-thread", "macros", "net"] }
tokio-util = "0.7.12"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde"] }
