[package]
name = "linkyhost"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
argon2 = "0.5.3"
async-trait = "0.1.83"
aws-config = "1.5.10"
aws-sdk-s3 = "1.60.0"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
axum_typed_multipart = "0.13.2"
bytes = "1.8.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
hex = "0.4.3"
http-body-util = "0.1.2"
rand = "0.8.5"
ring = "0.17.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tempfile = "3.14.0"
time = "0.3.36"
tokio = { version = "1.41.1", features = ["signal", "tracing", "sync", "rt-multi-thread", "macros", "net"] }
tokio-util = "0.7.12"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde"] }
