[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
futures = "0.3.31"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "chrono", "postgres"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "limit"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.69.0", features = ["behavior-version-latest", "rt-tokio"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
async-trait = "0.1.85"
tokio-stream = "0.1.17"
jsonwebtoken = "9.3.0"
tokio-util = "0.7.13"
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
dashmap = "6.1.0"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
axum_typed_multipart = "0.15.1"
tempfile = "3.15.0"
libvips = "1.7.0"
