[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
futures = "0.3.31"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "chrono", "postgres"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "limit"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
async-trait = "0.1.85"
tokio-stream = "0.1.17"
jsonwebtoken = "9.3.0"
tokio-util = { version = "0.7.13", features = ["io"] }
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
dashmap = "6.1.0"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
axum_typed_multipart = "0.15.1"
tempfile = "3.15.0"
lazy_static = "1.5.0"
fast_image_resize = { version = "5.1.1", features = ["image"] }
image = { version = "0.25.5", features = ["avif"] }
